# rsec-net

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  go.mod  go.sum  main.go
cmd/: announce.go  root.go  startnode.go
internal/graph/: dijkstra.go  dijkstra_test.go  graph.go  graph_test.go  model.go
internal/maputils/: utils.go  utils_test.go
internal/tcp/: conn.go  conn_test.go
internal/udp/: model.go  msg.go  msg_test.go  multicast.go  unicast.go  unicast_test.go
local-multicast/: Dockerfile  multicaster.py  pyproject.toml  routingtable.debug.yml  routingtable.yaml
pkg/net/: latency.go  model.go  reachability.go  reachability_test.go  routing.go  routing_test.go
